test/integration/bad/function-signatures/overloading/define_extern2.stan
functions {
  @extern real foo(int x, int y);
  real foo(int x, int y);
}
